--- a/client/src/components/Item/item.module.scss
+++ b/client/src/components/Item/item.module.scss
@@ -9,10 +9,9 @@
   }
 
   &__img {
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
+    height: 166px;
+    width: 150px;
+    object-fit: contain;
   }
 
   &__price {
