--- a/client/src/components/Location/location.module.scss
+++ b/client/src/components/Location/location.module.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   transition: all ease-in-out 200ms;
   &:hover {
-    color: var(--color-text-secondary);
+    color: var(--color-secondary-text-light);
   }
   &:focus {
     outline: none;
