--- a/admin/src/components/Header/header.module.scss
+++ b/admin/src/components/Header/header.module.scss
@@ -52,7 +52,7 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: var(--color-text-secondary);
+    background-color: var(--color-secondary-text);
     animation: active 300ms ease-in-out;
     content: '';
   }
