--- a/client/src/components/Menu/menu.module.scss
+++ b/client/src/components/Menu/menu.module.scss
@@ -54,11 +54,11 @@
     align-content: center;
 
     padding: 12px 16px 12px 14px;
+    color: var(--color-primary-text-light);
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
     background-color: var(--color-primary);
-
     border: 0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -70,10 +70,10 @@
     &::before {
       width: 18px;
       height: 18px;
-      background-color: var(--color-text-primary);
+      margin-right: 5px;
+      background-color: var(--color-primary-text-light);
       transition: all ease-in-out 200ms;
       content: '';
-
       -webkit-mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
       mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
       -webkit-mask-size: cover;
