--- a/client/src/components/Slider/slider.module.scss
+++ b/client/src/components/Slider/slider.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   :global {
     .swiper-pagination-bullet-active {
-      background-color: var(--color-primary-text-lighter);
+      background-color: var(--color-primary-text);
     }
     .swiper-button-prev,
     .swiper-button-next {
