--- a/client/src/components/Advantage/advantage.module.scss
+++ b/client/src/components/Advantage/advantage.module.scss
@@ -1,35 +1,34 @@
 @import 'src/scss/global_variables.scss';
-.advantage {
-  display: inline-flex;
 
+.wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  margin: 2rem 0;
   padding: 2rem 5rem;
-  background-color: var(--color-primary-lightest);
-
-  @media screen and (max-width: $viewport-sm) {
+  color: var(--color-secondary-text-dark);
+  background-color: var(--bg);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1),
+    -23px 0 20px -23px rgba(0, 153, 204, 0.8),
+    23px 0 20px -23px rgba(0, 153, 204, 0.8), 0 0 40px rgba(0, 0, 0, 0) inset;
+}
+.block {
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+}
+.icon {
+  width: initial !important;
+  height: 48px;
+}
+.description {
+  max-width: 200px;
+  height: 100%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+@media screen and (max-width: $viewport-sm) {
+  .wrapper {
     flex-direction: column;
-  }
-  &-wrap {
-    display: flex;
-    justify-content: center;
-
-    width: 100%;
-    margin: 2rem 0;
-  }
-
-  &__block {
-    display: flex;
-    align-items: center;
-
-    margin: 1rem;
-  }
-  &__icon {
-    width: initial !important;
-    height: 48px;
-  }
-  &__description {
-    max-width: 200px;
-    height: 100%;
-    margin-right: 1rem;
-    margin-left: 1rem;
   }
 }
