--- a/client/src/components/Menu/menu.module.scss
+++ b/client/src/components/Menu/menu.module.scss
@@ -34,7 +34,7 @@
   }
   &__button {
     position: relative;
-    display: flex;
+    display: flex !important;
     align-content: center;
 
     padding: 12px 16px 12px 14px;
@@ -52,6 +52,7 @@
     transition: all 0.12s ease-out;
     -webkit-appearance: none;
     &::before {
+      display: inline-flex;
       width: 18px;
       height: 18px;
       background-color: var(--color-primary-text-light);
@@ -63,6 +64,7 @@
       mask-size: cover;
     }
     &-container {
+      display: inline-flex;
       overflow: hidden;
     }
     &-input {
