--- a/client/src/components/Layout/layoutclient.module.scss
+++ b/client/src/components/Layout/layoutclient.module.scss
@@ -1,6 +1,7 @@
 @import 'src/scss/global_variables.scss';
 
 .main {
+  min-height: 50vh;
   padding: 1rem 5rem;
   @media screen and (max-width: $viewport-sm) {
     padding: 1rem 0;
