--- a/client/src/components/CardProduct/cardproduct.module.scss
+++ b/client/src/components/CardProduct/cardproduct.module.scss
@@ -93,11 +93,14 @@
   color: var(--color-secondary);
   font-size: 1rem;
 }
-.icon-track {
+.icon-truck {
   margin-right: 1rem;
+  height: 2rem;
 }
 .icon-phone {
   margin-left: 1rem;
+  height: 1.4rem;
+  transform: translateY(0.2rem);
 }
 .call {
   width: 100%;
@@ -111,6 +114,7 @@
   letter-spacing: 2px;
   &__icon {
     margin-right: 1rem;
+    height: 1.1rem;
   }
 }
 .hr {
