--- a/client/src/components/Navigation/navigation.module.scss
+++ b/client/src/components/Navigation/navigation.module.scss
@@ -42,9 +42,9 @@
     display: inline-flex;
     margin-right: 0.2rem;
     padding: 5px 10px;
+    color: var(--color-primary-text);
     font-weight: 600;
     white-space: nowrap;
-
     &:first-child {
       margin-left: 10px;
     }
