Change styles xs mobile features

--- a/client/src/components/CardProduct/cardproduct.module.scss
+++ b/client/src/components/CardProduct/cardproduct.module.scss
@@ -144,6 +144,9 @@
 }
 
 @media screen and (max-width: $viewport-md) {
+  .h1 {
+    margin: 0 1rem;
+  }
   .block {
     grid-template-areas:
       'h1'
@@ -200,5 +203,8 @@
       width: 320px;
       height: 320px;
     }
+  }
+  .call {
+    font-size: 1rem;
   }
 }
