--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -34,6 +34,8 @@
   // Дополнительные параметры
   --color-divider: hsl(0, 0%, 90%);
   --radius: 4px;
+  --shadow: 0 9px 46px 0 rgba(34, 34, 34, 0.06),
+    0 1px 11px 0 rgba(34, 34, 34, 0.06);
 }
 
 * {
