--- a/admin/src/components/Location/location.module.scss
+++ b/admin/src/components/Location/location.module.scss
@@ -4,12 +4,33 @@
 .button {
   display: inline-flex;
 
-  height: 100%;
   padding: 0;
   background-color: transparent;
 
   cursor: pointer;
   transition: all ease-in-out 200ms;
+  position: relative;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  margin: 5px;
+  height: 44px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+
+  border: 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: var(--radius);
+
+  cursor: pointer;
+  transition: all 0.12s ease-out;
+  -webkit-appearance: none;
+
+  &:focus {
+    outline: none;
+  }
   &:hover {
     color: var(--color-secondary-text);
   }
@@ -21,35 +42,36 @@
   }
 }
 .dropdown {
-  position: absolute;
-  top: 30px;
   z-index: 100;
   display: none;
   flex-direction: column;
-  box-sizing: border-box;
+  position: absolute;
+  top: 45px;
+  left: 5px;
   padding: 1rem;
+  box-sizing: border-box;
   background-color: var(--color-bg);
   border: 1px solid var(--color-divider);
   border-radius: var(--radius);
   &:before {
+    content: ' ';
     position: absolute;
-    top: -16px;
-    left: 0;
     width: 0;
     height: 0;
+    left: 0;
+    top: -16px;
     border: 8px solid;
     border-color: transparent transparent var(--color-divider);
-    content: ' ';
   }
   &:after {
+    content: ' ';
     position: absolute;
-    top: -12px;
-    left: 2px;
     width: 0;
     height: 0;
+    left: 2px;
+    top: -12px;
     border: 6px solid;
     border-color: transparent transparent #fff;
-    content: ' ';
   }
   &-show {
     display: flex;
@@ -58,7 +80,11 @@
     white-space: nowrap;
   }
   &__element {
-    margin-top: 1rem;
     line-height: 22px;
+    margin-top: 1rem;
   }
+}
+.icon {
+  width: 1.2rem;
+  height: 1rem;
 }
