--- a/client/src/components/Spinner/spinner.module.scss
+++ b/client/src/components/Spinner/spinner.module.scss
@@ -8,10 +8,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .spinner {
-  width: 10%;
+  width: 15%;
+  height: 15%;
   animation: spin linear 2000ms infinite;
 }
 
