--- a/client/src/components/Header/header.module.scss
+++ b/client/src/components/Header/header.module.scss
@@ -13,7 +13,6 @@
   height: 46px;
   height: 100%;
   padding: 1rem 5rem;
-  overflow: hidden;
 }
 .logo {
   display: flex;
@@ -23,6 +22,10 @@
 
   width: 223px;
   height: 45px;
+  &__icon {
+    width: inherit;
+    height: inherit;
+  }
 }
 .menu {
   grid-area: menu;
@@ -51,6 +54,8 @@
 
   text-align: center;
   &__icon {
+    width: 1.2rem;
+    height: 1.2rem;
     margin: 5px auto;
     font-size: 20px;
   }
