Add navigation link

--- a/client/src/components/Navigation/navigation.module.scss
+++ b/client/src/components/Navigation/navigation.module.scss
@@ -103,3 +103,10 @@
     }
   }
 }
+
+.link-active {
+  color: var(--color-secondary-text);
+  &:visited {
+    color: var(--color-secondary-text);
+  }
+}
