--- a/client/src/components/Item/item.module.scss
+++ b/client/src/components/Item/item.module.scss
@@ -1,56 +1,70 @@
-@import 'src/scss/global_variables.scss';
-
-.item {
-  display: flex;
-  flex-direction: column;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &__img {
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
-  }
-
-  &__price {
-    &-current {
-      font-size: 1.5rem;
-    }
-    &-old {
-      margin-left: 0.5rem;
-      color: var(--color-primary-text-lighter);
-      font-weight: 100;
-      font-size: 1.1rem;
-
-      text-decoration: line-through;
-    }
-    &-current::after,
-    &-old::after {
-      font-size: 0.7em;
-      content: 'руб.';
-    }
-  }
-
-  &__title {
-    color: var(--color-secondary);
-    &:visited {
-      color: var(--color-secondary);
-    }
-    &:hover {
-      color: var(--color-secondary-text);
-    }
+.wrap {
+  position: relative;
+  display: inline-flex;
+  flex-direction: row;
+  transition: all 0.4s ease-in-out;
+  background-color: var(--color-bg);
+  &:hover {
+    -moz-transform: scale(1.04);
+    -ms-transform: scale(1.04);
+    -o-transform: scale(1.04);
+    transform: scale(1.04);
+    z-index: 2;
+    -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
+    -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
+    cursor: pointer;
   }
 }
-
-@media screen and (max-width: $viewport-sm) {
-  .item {
-    :global {
-      .swiper-button-next,
-      .swiper-button-prev {
-        display: none;
-      }
-    }
+.item {
+  display: inline-flex;
+  position: relative;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 20px;
+  box-sizing: border-box;
+  height: 400px;
+  max-width: 270px;
+}
+.type {
+  text-transform: lowercase;
+}
+.label {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  font-size: 0.9rem;
+}
+.name {
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  min-height: 60px;
+}
+.img {
+  width: 230px;
+  height: 230px;
+  object-fit: cover;
+}
+.price {
+  &-current {
+    font-style: normal;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    font-weight: 700;
+    display: inline-block;
+    margin-right: 0.8rem;
+    white-space: nowrap;
+  }
+  &-old {
+    font-weight: 100;
+    font-style: normal;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    display: inline-block;
+    color: var(--color-primary-text-lighter);
+    text-decoration-line: line-through;
+    white-space: nowrap;
   }
 }
