Change adaptability of the Catalog on the mobile

--- a/client/src/components/Item/item.module.scss
+++ b/client/src/components/Item/item.module.scss
@@ -1,9 +1,16 @@
-.wrap {
+@import 'src/scss/global_variables.scss';
+
+.item {
   position: relative;
   display: inline-flex;
-  flex-direction: row;
-  background-color: var(--color-bg);
+  flex-direction: column;
+  box-sizing: border-box;
+  max-width: 270px;
+  height: 400px;
+  padding: 20px;
+  overflow: hidden;
   transition: all 0.4s ease-in-out;
+  z-index: 100;
   &:hover {
     z-index: 2;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
@@ -15,16 +22,6 @@
     transform: scale(1.04);
     cursor: pointer;
   }
-}
-.item {
-  position: relative;
-  display: inline-flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  max-width: 270px;
-  height: 400px;
-  padding: 20px;
-  overflow: hidden;
 }
 .type {
   text-transform: lowercase;
@@ -66,5 +63,31 @@
     line-height: 2rem;
     white-space: nowrap;
     text-decoration-line: line-through;
+  }
+}
+
+@media screen and (max-width: $viewport-sm) {
+  .item {
+    max-width: 100%;
+    display: flex;
+    z-index: 2;
+    border: 1px solid var(--color-divider);
+    cursor: pointer;
+
+    width: 100%;
+    &:hover {
+      transform: none;
+    }
+  }
+  .img {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: $viewport-xxs) {
+  .img {
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
   }
 }
