--- a/client/src/components/Header/header.module.scss
+++ b/client/src/components/Header/header.module.scss
@@ -63,14 +63,16 @@
 
 @media screen and (max-width: $viewport-sm) {
   .block {
-    grid-gap: 5px;
+    grid-gap: 0;
     grid-template-areas:
       'menu logo toolbar'
       'search search search'
       'nav nav nav';
     grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 48px 1fr 79px;
-    padding: 0.2rem;
+    grid-template-columns: 48px 1fr 48px;
+    padding: 0;
+    margin: 0 0.4rem;
+    justify-items: center;
   }
   .menu {
     margin: 0;
@@ -83,5 +85,11 @@
     & > :nth-child(n + 2) {
       display: none;
     }
+  }
+}
+
+@media screen and (max-width: $viewport-xxs) {
+  .logo {
+    width: 190px;
   }
 }
