--- a/client/src/components/Maintenance/maintenance.module.scss
+++ b/client/src/components/Maintenance/maintenance.module.scss
@@ -1,10 +1,20 @@
 @import '@src/scss/global_variables.scss';
+.wrap {
+  display: inline-block;
+}
 .block {
   display: flex;
   flex-direction: column;
 }
 .list {
   padding: 1rem;
+}
+
+.img {
+  float: left;
+  width: 240px;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
 @media (max-width: $viewport-md) {
   .block {
