--- a/admin/src/components/BannersCreate/bannerscreate.module.scss
+++ b/admin/src/components/BannersCreate/bannerscreate.module.scss
@@ -6,13 +6,19 @@
   display: grid;
   grid-gap: 10px;
   grid-template-areas:
-    'name images slider'
-    'dateEnd images slider'
+    'name . slider'
+    'dateEnd . slider'
+    'href . .'
+    'images . .'
     'buttons . .';
   grid-template-columns: 300px 1fr 1fr;
 }
 .name {
   grid-area: name;
+}
+
+.href {
+  grid-area: href;
 }
 .dateEnd {
   grid-area: dateEnd;
