--- a/client/src/components/Menu/menu.module.scss
+++ b/client/src/components/Menu/menu.module.scss
@@ -13,100 +13,77 @@
   box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 0.5);
   transform: translateY(-999px);
   transition: all linear 600ms 200ms;
-
-  &__location {
-    display: none;
-    flex: 100%;
-
-    margin: 1rem 0;
-  }
-  &-wrap {
-    position: absolute;
-    right: 0;
-    left: 0;
-    z-index: 100;
-    display: flex;
-
-    width: 100%;
-    height: 0;
-    opacity: 0;
-    transition: all linear 200ms 0ms;
-  }
-  &__button {
-    position: relative;
-    display: flex !important;
-    align-content: center;
-
-    padding: 12px 16px 12px 14px;
-    color: var(--color-primary-text-lightest);
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    background-color: var(--color-primary);
-    border: 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: var(--radius);
-
-    cursor: pointer;
-    transition: all 0.12s ease-out;
-    -webkit-appearance: none;
-    &::before {
-      display: inline-flex;
-      width: 18px;
-      height: 18px;
-      background-color: var(--color-primary-text-lightest);
-      transition: all ease-in-out 200ms;
-      content: '';
-      -webkit-mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
-      mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
-      -webkit-mask-size: cover;
-      mask-size: cover;
-    }
-    &-container {
-      display: inline-flex;
-      overflow: hidden;
-    }
-    &-input {
-      position: absolute;
-      left: -999px;
-    }
-    &-input:checked ~ .menu__button::before {
-      -webkit-mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
-      mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
-    }
-    &-input:checked ~ .menu-wrap {
-      height: 100vh;
-      opacity: 1;
-      transition: all linear 200ms 200ms;
-    }
-    &-input:checked ~ .menu-wrap > .menu {
-      transform: translateY(0px);
-      transition: all linear 200ms 0ms;
-    }
-  }
 }
 
+.button {
+  position: relative;
+  display: flex !important;
+  display: inline-flex;
+  align-content: center;
+
+  padding: 12px 16px 12px 14px;
+  color: var(--color-primary-text-lightest);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: var(--color-primary);
+  border: 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: var(--radius);
+
+  cursor: pointer;
+  transition: all 0.12s ease-out;
+  -webkit-appearance: none;
+  &::before {
+    display: inline-flex;
+    width: 18px;
+    height: 18px;
+    background-color: var(--color-primary-text-lightest);
+    transition: all ease-in-out 200ms;
+    content: '';
+    -webkit-mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
+    mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
+    -webkit-mask-size: cover;
+    mask-size: cover;
+  }
+  &-input {
+    position: absolute;
+    left: -999px;
+  }
+  &-input:checked ~ .button::before {
+    -webkit-mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
+    mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
+  }
+}
+.container {
+  display: inline-flex;
+  overflow: hidden;
+}
 .text {
   display: inline-block;
 
   box-sizing: border-box;
   padding-left: 12px;
 }
-
+@media screen and (max-width: $viewport-md) {
+  .menu {
+    justify-content: space-between;
+    padding: 0 0.8rem;
+    padding-bottom: 0.8rem;
+  }
+  .container {
+    width: 115px;
+  }
+}
 @media screen and (max-width: $viewport-sm) {
   .menu {
     justify-content: space-between;
     padding: 0 0.8rem;
     padding-bottom: 0.8rem;
-    &__button {
-      &-container {
-        width: 50px;
-      }
-    }
-    &__location {
-      display: block;
-    }
+  }
+  .container {
+    width: 55px;
   }
   .text {
     display: none;
