Change color schema

--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -34,9 +34,9 @@
   }
 
   &__title {
-    color: var(--color-secondary);
+    color: var(--color-primary);
     &:visited {
-      color: var(--color-secondary);
+      color: var(--color-primary);
     }
     &:hover {
       color: var(--color-secondary-text);
