--- a/admin/src/components/PortfolioList/portfoliolist.module.scss
+++ b/admin/src/components/PortfolioList/portfoliolist.module.scss
@@ -1,13 +1,21 @@
+.block {
+  display: flex;
+  flex-wrap: wrap;
+}
 .banner {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  width: 550px;
+  height: 550px;
+  min-width: 550px;
+  margin: 1rem;
   padding: 0.5rem;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
 }
 .img {
   width: 100%;
-  height: 300px;
+  height: 500px;
   object-fit: cover;
 }
 .header {
